k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pipelines-vote-ui
  name: pipelines-vote-ui
spec:
  type: NodePort
  ports:
    - name: 8080-tcp
      port: 443
      targetPort: 443
      protocol: TCP
  selector:
    app: pipelines-vote-ui
