k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: pipelines-vote-ui
  name: pipelines-vote-ui-test
spec:
  port:
    targetPort: 443-tcp
  to:
    kind: Service
    name: pipelines-vote-ui
    weight: 100
